# nitrapi-python

./: pyproject.toml
example/: main.py
nitrado/: __init__.py  client.py  http.py
nitrado/globals/: __init__.py  health.py  maintenance.py  version.py
nitrado/oauth/: sub_token.py
nitrado/registration/: __init__.py  activate.py  recaptcha.py  register.py
