[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nitrapi-python"
version = "0.1.0"
description = "Python client for the Nitrado Nitrapi API"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
]

[tool.setuptools.packages.find]
where = ["."]
